# ndk_audio

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hqk/ndk_audio/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/libavutil/: mem.h
app/src/main/java/com/hqk/ndk_audio/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/hqk/ndk_audio/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
